name: lzma-maoe
version: 0.0.0
synopsis: Compression and decompression in the xz format using liblzma
description: This package is deprecated. Plese consider using
  <https://hackage.haskell.org/package/lzma> instead.
homepage: https://github.com/maoe/lzma
bug-reports: https://github.com/maoe/lzma/issues
license: BSD3
license-file: LICENSE
author: Mitsutoshi Aoe
maintainer: Mitsutoshi Aoe <maoe@foldr.in>
copyright: Copyright (C) 2014-2015 Mitsutoshi Aoe
category: Codec
build-type: Simple
cabal-version: >=1.10
tested-with:
  GHC == 8.2.2
  GHC == 8.4.4
  GHC == 8.6.5
  GHC == 8.8.3
  GHC == 8.10.1

flag debug
  default: False
  manual: True

flag examples
  default: False
  manual: True

library
  exposed-modules:
    Codec.Compression.LZMA
    Codec.Compression.LZMA.Incremental
    Codec.Compression.LZMA.Internal
    Codec.Compression.LZMA.Internal.C
    Codec.Compression.LZMA.Internal.IndexDecoder
    Codec.Compression.LZMA.Internal.Stream
  other-modules:
    Codec.Compression.LZMA.Internal.Constants
    Codec.Compression.LZMA.Internal.Types
  build-depends:
      base >= 4.10 && < 4.14
    , bytestring >= 0.10 && < 0.11
    , exceptions >= 0.6 && < 0.11
    , mtl >= 2.2 && < 2.3
    , pipes >= 4.1 && < 4.4
    , pipes-safe >= 2.2 && < 2.4
    , StateVar >= 1.1 && < 1.3
    , tagged >= 0.7 && < 0.9
    , vector >= 0.10 && < 0.13

  if impl(ghc >= 8.0)
    ghc-options:
      -Wcompat
      -Wnoncanonical-monad-instances
      -Wnoncanonical-monadfail-instances
  else
    -- provide/emulate `Control.Monad.Fail` and `Data.Semigroups` API for
    -- pre-GHC8
    build-depends:
        fail == 4.9.*
      , semigroups == 0.18.*
  if impl(ghc < 7.6)
    build-depends: ghc-prim
  build-tools: c2hs >= 0.19.1
  if os(darwin)
    pkgconfig-depends: liblzma
  else
    extra-libraries: lzma
  ghc-options: -Wall
  if flag(debug)
    cpp-options: -DDEBUG
    ghc-options: -fno-ignore-asserts
    build-depends:
        pretty-show
  hs-source-dirs: src
  c-sources:
    cbits/helpers.c
  default-language: Haskell2010

executable xz-list
  if !flag(examples)
    buildable: False
  main-is: xz-list.hs
  build-depends:
      base
    , bytestring
    , lzma-maoe
    , mtl
    , StateVar
  ghc-options: -Wall
  hs-source-dirs: examples
  default-language: Haskell2010

executable xz-seek
  if !flag(examples)
    buildable: False
  main-is: xz-seek.hs
  build-depends:
      base
    , bytestring
    , lzma-maoe
    , mtl
    , pipes
  ghc-options: -Wall
  hs-source-dirs: examples
  default-language: Haskell2010

executable xz-cat
  if !flag(examples)
    buildable: False
  main-is: xz-cat.hs
  build-depends:
      base
    , bytestring
    , lzma-maoe
    , pipes
  ghc-options: -Wall
  hs-source-dirs: examples
  default-language: Haskell2010

executable xz-compress
  if !flag(examples)
    buildable: False
  main-is: xz-compress.hs
  build-depends:
      base
    , bytestring
    , lzma-maoe
    , pipes
  ghc-options: -Wall
  hs-source-dirs: examples
  default-language: Haskell2010

test-suite test-lzma
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: test-lzma.hs
  build-depends:
      base
    , bytestring
    , lzma-maoe
    , tasty
    , tasty-th
    , tasty-quickcheck
  default-language: Haskell2010

test-suite test-index
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: test-index.hs
  build-depends:
      base
    , lzma-maoe
    , StateVar
    , tasty
    , tasty-hunit
    , tasty-th
  default-language: Haskell2010

test-suite test-block
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: test-block.hs
  build-depends:
      base
    , lzma-maoe
    , StateVar
    , tasty
    , tasty-hunit
    , tasty-th
    , vector
  default-language: Haskell2010

source-repository head
  type: git
  branch: develop
  location: https://github.com/maoe/lzma.git

source-repository this
  type: git
  tag: v0.0.0
  location: https://github.com/maoe/lzma.git
